tests/suite/fail/generated/parser/fail_undefined_3.ny
fn main() {
    let x = y3 //~ ERROR undefined variable
}
